--- a/proj/numbergen.html
+++ b/proj/numbergen.html
@@ -35,8 +35,9 @@
     <h1>Random Number Generator</h1>
 
     <div class="category" id="euromillions">
-        <h2>EUROMILLIONS</h2>
+        <h2>EUROMILLIONS (0->50)</h2>
         <div id="euro-main"></div>
+        <h2>EUROMILLIONS (0->12)</h2>
         <div id="euro-lucky"></div>
     </div>
 
