--- a/proj/numbergen.html
+++ b/proj/numbergen.html
@@ -35,15 +35,16 @@
     <h1>Random Number Generator</h1>
 
     <div class="category" id="euromillions">
-        <h2>EUROMILLIONS (0->50)</h2>
+        <h2>EUROMILLIONS (1->50)</h2>
         <div id="euro-main"></div>
-        <h2>EUROMILLIONS (0->12)</h2>
+        <h2>EUROMILLIONS (1->12)</h2>
         <div id="euro-lucky"></div>
     </div>
 
     <div class="category" id="loto">
-        <h2>LOTO</h2>
+        <h2>LOTO (1->49)</h2>
         <div id="loto-main"></div>
+        <h2>LOTO (1->10)</h2>
         <div id="loto-special"></div>
     </div>
 
