--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Basic JS Games</title>
     <style>
         body {
-            background-color: black;
+            background-image: url('backpic.jpeg'); /* Add your background image */
+            background-size: cover; /* Ensures the image covers the entire background */
+            background-position: center; /* Centers the image */
+            background-repeat: no-repeat; /* Prevents the image from repeating */
             color: red;
             font-family: monospace;
             display: flex;
