--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Basic JS Games</title>
     <style>
         body {
-            background-image: url('backpic.jpeg'); /* Add your background image */
+            background-image: url('proj/backpic.jpeg'); /* Correct path to background image */
             background-size: cover; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the image */
             background-repeat: no-repeat; /* Prevents the image from repeating */
