--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             margin: 10px 0;
         }
         a {
-            color: lime;
+            color: green;
             text-decoration: none;
             font-size: 1.5em;
             margin-top: 10px;
