--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             flex-direction: column;
         }
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             margin: 10px 0;
         }
         a {
-            color: green;
+            color: lime;
             text-decoration: none;
-            font-size: 1.5em;
+            font-size: 2em;
             margin-top: 10px;
         }
         a:hover {
