--- a/proj/numbergen.html
+++ b/proj/numbergen.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Random Number GEN</h1>
+    <h1>Random NR GEN</h1>
 
     <div class="category" id="euromillions">
         <h2>EUROMILLIONS (1->50)</h2>
