--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </style>
 </head>
 <body>
+    <h1>HIRAGANA FLASHCARDS</h1>
+    <a href="proj/flashcards/flashcards.html">HIRAGANA MNEMONICS</a>
     <h1>Basic JS Games</h1>
     <a href="proj/games/invaders.html">Play Space Invaders</a>
     <a href="proj/games/pong.html">Play Pong</a>
