--- a/proj/hiragana/flashcards.html
+++ b/proj/hiragana/flashcards.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Interactive Flashcards</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="flashcard-container" id="flashcard-container"></div>
+  <div class="navigation">
+    <button id="prevBtn" onclick="prevCard()">Previous</button>
+    <button id="nextBtn" onclick="nextCard()">Next</button>
+  </div>
+  <script src="scripts.js"></script>
+</body>
+</html>
 
